examples/test/testpolicy3251.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3251
  namespace: namespace74
spec:
  podSelector:
    matchLabels:
      key11: value3
      key46: value27
      key36: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value39
          key1: value37
      podSelector:
        matchLabels:
          key49: value22
